c - crash     b - bug fix    e - enhancement    f - new feature

2.3.6
  e - in Linux, a pbs_mom will now "kill" a job's task, even if that task can no longer be
      found in the OS processor table. This prevents jobs from getting "stuck" when the PID
      vanishes in some rare cases.
  e - forward-ported change from 2.1-fixes (r2581) (b - reissue job obit even if no processes are found)

2.3.5
  e - added new init.d scripts for Debian/Ubuntu systems
  b - fixed regression in 2.3.4 release which incorrectly changed soname for libtorque

2.3.4
  b - fixed a bug with RPM spec files due to new pbs_track executable
  b - fixed a bug with "max_report" where jobs not in the Q state were not 
      always being reported to scheduler
  b - fixed bug with new UNIX socket communication when more than one TORQUE 
      instance is running on the same host
  c - fixed a few memory errors due to a spurious comma and some uninitialized 
      memory being allocated
  b - fixed a bug preventing multiple TORQUE servers and TORQUE MOMs from 
      operating properly all from the same host
  f - enabled 'qsub -T' to specify "job type." Currently this will allow a per 
      job prolog/epilog
  f - added a new '-E' option to qstat which allows command-line users to pass 
      "extend" strings via the API
  f - added new max_report queue attribute which will limit the number of Idle 
      jobs, per queue, that TORQUE reports to the scheduler
  e - enhanced logging when a hostname cannot be looked up in DNS
  e - PBS_NET_MAX_CONNECTIONS can now be defined at compile time (via CFLAGS)
  e - modified source code so that all .c and .h files now conform more closely
      to the new CRI format style
  c - fixed segfault when loading job files of an older/incompatible version
  b - fixed a bug where if attempt to send job to a pbs_mom failed due to 
      timeout, the job would indefinitely remain the in 'R' state